[gd_scene load_steps=6 format=3 uid="uid://qj1ak7x2pw6u"]

[ext_resource type="Script" path="res://Boss.gd" id="1_hw25a"]
[ext_resource type="Texture2D" uid="uid://cdblabe7lenui" path="res://Mobs/Boss/b cell.png" id="2_ru1e7"]
[ext_resource type="Texture2D" uid="uid://dn6i0s06ttu4r" path="res://Mobs/Boss/осветленный b cell.png" id="3_30ajv"]
[ext_resource type="Texture2D" uid="uid://cvflmh83j2f2p" path="res://Mobs/Boss/каем б цел_Монтажная область 1.png" id="4_8kvu1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8kbj6"]
radius = 24.0208

[node name="Boss" type="CharacterBody2D" groups=["Boss", "Enemies"]]
scale = Vector2(8, 8)
collision_layer = 2
script = ExtResource("1_hw25a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8kbj6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.75, 0.125)
scale = Vector2(0.154492, 0.154492)
texture = ExtResource("2_ru1e7")

[node name="LowHealth" type="Sprite2D" parent="Sprite2D"]
texture = ExtResource("3_30ajv")

[node name="Low Health Flickering" type="Timer" parent="Sprite2D/LowHealth"]
wait_time = 0.5

[node name="Border" type="Sprite2D" parent="Sprite2D"]
texture = ExtResource("4_8kvu1")

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 0.127
one_shot = true

[node name="Pivot" type="Marker2D" parent="."]

[node name="Shoot" type="Marker2D" parent="Pivot"]
position = Vector2(32.75, 0)

[node name="OneAttack" type="Timer" parent="."]
wait_time = 2.097
one_shot = true

[node name="OneAttack2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="OneAttack3" type="Timer" parent="."]
wait_time = 2.612
one_shot = true

[connection signal="timeout" from="Sprite2D/LowHealth/Low Health Flickering" to="." method="_on_low_health_flickering_timeout"]
[connection signal="timeout" from="ShootCooldown" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="timeout" from="OneAttack" to="." method="_on_one_attack_timeout"]
[connection signal="timeout" from="OneAttack2" to="." method="_on_one_attack2_timeout"]
[connection signal="timeout" from="OneAttack3" to="." method="_on_one_attack3_timeout"]
